# scheduled-pipelines

./: CHANGELOG.md  Makefile  README-unprocessed.md  README.md  TODO.md  pandoc-include-code.lua  scheduled-pipelines.cabal  shell.nix
.github/workflows/: main.yaml
app/: Main.hs
c4model/: container-pipeline.puml  system-context.puml
src/: Config.hs  LibMain.hs  LibTest.hs  Logger.hs  Queue.hs  Scheduler.hs  Stage.hs  Workers.hs
src/Scheduler/: Queue.hs
src/Workers/: Queue.hs
test/: Main.hs
